# neoark-deprecated

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
client/: .eslintrc.json  package.json
client/src/: App.css  App.js  routes.js  serviceWorker.js
client/src/Layout/: index.js
client/src/Layout/Content/: index.js
client/src/Layout/Header/: index.js
client/src/Layout/Navigator/: index.js
client/src/Planet/ResourcesBar/: index.js
client/src/common/helpers/: use-interval.js  with-context-factory.js  with-wrapper.js
client/src/common/mocks/: building-configurations.json  items.json  planet-queue.json  recipes.json  ships.json  technologies.json
client/src/common/providers/ApiProvider/: index.js
client/src/common/providers/PlanetProvider/: PlanetProvider.js  index.js  selectors.js
client/src/common/providers/PlanetsProvider/: PlanetsProvider.js  index.js
client/src/common/providers/UserProvider/: UserProvider.js  index.js
client/src/components/ApiProvider/: index.js
client/src/components/AppDialog/: index.js
client/src/components/AppSelect/: AppSelect.js  index.js  styles.js
client/src/components/HtmlTooltip/: index.js
client/src/components/Layout/: index.js
client/src/components/Layout/Content/: index.js
client/src/components/Layout/Header/: index.js
client/src/components/Planet/: Planet.js  index.js  stories.js
client/src/components/ProgressBar/: ProgressBar.js  index.js  styles.js
client/src/components/RouteWithSubRoutes/: index.js
client/src/mocks/: building-configurations.json  buildings.json  recipes.1.json  recipes.json
client/src/pages/Dashboard/: Dashboard.js  index.js  routes.js
client/src/pages/Home/: index.js
client/src/pages/Portal/: index.js  routes.js
migrations/2019-06-15-225630_initial/: down.sql  up.sql
src/: client.rs  context.rs  db.rs  defines.rs  main.rs  proto.rs  recipes.rs  schema.rs  server.rs
src/models/: inventory.rs  mod.rs  planet.rs  player.rs  processor.rs  technology.rs
src/routes/: auth.rs  galaxy_route.rs  mod.rs  movement_route.rs  planet_route.rs  player_route.rs  processor_route.rs  technology_route.rs
(+62 files in other folders)
