[package]
name = "neoark"
version = "0.1.0"
authors = ["champii <contact@champii>"]
edition = "2018"

[dependencies]
serde = ""
serde_derive = ""
serde_json = "1.0"
diesel = { version = "1.4.0", features = ["postgres", "numeric"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
orm_macro_derive = { git = "https://gitlab.com/Champii1/diesel-orm.git" }
bigdecimal = { version = "0.0.14", features = ["serde"] }
rocket = "0.4.1"
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"
lazy_static = "1.3.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = true
features = ["diesel_postgres_pool"]
