[package]
name = "neoark"
version = "0.1.0"
authors = ["champii <contact@champii>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.47"
serde = ""
serde_derive = ""
serde_json = "1.0"
bigdecimal = { version = "0.0.14", features = ["serde"] }
rand=""
rust-crypto = "0.2"
rustc-serialize = "0.3"
lazy_static = "1.3.0"
jwt = "0.4.0"
rocket = "0.4.1"
diesel = { version = "1.4.0", features = ["postgres", "numeric"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
orm_macro_derive = { git = "https://gitlab.com/Champii1/diesel-orm.git" }
neoark_lib = { path = "../neoark-lib" }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = true
features = ["diesel_postgres_pool"]
